--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App{
+  height: 300px;
+  overflow: hidden;
+  border: 1pt solid blue;
+}
+
+.App thead, .App th td{
+  height: 100%;
+  background-color: #f1f1f1;
+}
