--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+/* Basic styles for each demo section with a dark theme */
+section {
+  margin: 20px;
+  padding: 15px;
+  border-radius: 8px;
+  background-color: #333;
+  color: #ddd;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Styling for headers within each section */
+section h1, section h2, section h3 {
+  color: #fff;
+  margin-top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+section p {
+  color: #ccc;
+  line-height: 1.6;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.auto-scroll-table-container{
+  text-align: left;
+}
+.auto-scroll-table{
+  color: #eeee00;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.App-link {
-  color: #61dafb;
+.auto-scroll-table thead th {
+  background-color: black;
+  border-bottom: 1pt solid white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.example .props textarea{
+  width: 100%;
+}
+
+.example-container{
+  padding: 15px;
+  border-radius: 5px;
+  background-color: #222;
+}
+
+
+.documentation {
+  line-height: 1.5em;
+}
+
+.installation code{
+  padding: 10px;
+  border-radius: 5px;
+  display: block;
 }
