--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
+#root{
+  height: 100%;
+  max-width: 700px;
+  margin: auto;
+  padding:10px;
+  box-sizing: content-box;
+}
+html{
+  height: 100%;
+}
 body {
-  margin: 0;
+  overflow: auto;
+  position: relative;
+  /* padding-bottom: 560px; */
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,13 +23,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.App{
-}
-
-.App thead, .App th td{
-  height: 100%;
-
-  background-color: #f1f1f1;
+  background-color: black;
 }
